updated POST /api/auth/login to POST /api/auth
